// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom default render renders correctly 1`] = `

<div class="ais-NumericMenu">
  <ul class>
    <li class>
      <a>
        All
      </a>
    </li>
    <li class>
      <a>
        &lt;= 10$
      </a>
    </li>
    <li class>
      <a>
        10$ - 100$
      </a>
    </li>
    <li class>
      <a>
        100$ - 500$
      </a>
    </li>
    <li class>
      <a>
        &gt;= 500$
      </a>
    </li>
  </ul>
</div>

`;

exports[`custom default render renders correctly with a selected value 1`] = `

<div class="ais-NumericMenu">
  <ul class>
    <li class>
      <a>
        All
      </a>
    </li>
    <li class>
      <a>
        &lt;= 10$
      </a>
    </li>
    <li class="selected">
      <a>
        10$ - 100$
      </a>
    </li>
    <li class>
      <a>
        100$ - 500$
      </a>
    </li>
    <li class>
      <a>
        &gt;= 500$
      </a>
    </li>
  </ul>
</div>

`;

exports[`custom default render renders correctly with an URL for the href 1`] = `

<div class="ais-NumericMenu">
  <ul class>
    <li class>
      <a href="/price/all">
        All
      </a>
    </li>
    <li class>
      <a href="/price/%7B%22end%22:10%7D">
        &lt;= 10$
      </a>
    </li>
    <li class>
      <a href="/price/%7B%22start%22:10,%22end%22:100%7D">
        10$ - 100$
      </a>
    </li>
    <li class>
      <a href="/price/%7B%22start%22:100,%22end%22:500%7D">
        100$ - 500$
      </a>
    </li>
    <li class>
      <a href="/price/%7B%22start%22:500%7D">
        &gt;= 500$
      </a>
    </li>
  </ul>
</div>

`;

exports[`custom default render renders correctly without refinement 1`] = `

<div class="ais-NumericMenu ais-NumericMenu--noRefinement">
  <ul class="no-refinement">
    <li class>
      <a>
        All
      </a>
    </li>
    <li class>
      <a>
        &lt;= 10$
      </a>
    </li>
    <li class>
      <a>
        10$ - 100$
      </a>
    </li>
    <li class>
      <a>
        100$ - 500$
      </a>
    </li>
    <li class>
      <a>
        &gt;= 500$
      </a>
    </li>
  </ul>
</div>

`;

exports[`default render renders correctly 1`] = `

<div class="ais-NumericMenu">
  <ul class="ais-NumericMenu-list">
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value
        >
        <span class="ais-NumericMenu-labelText">
          All
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22end%22:10%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &lt;= 10$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:10,%22end%22:100%7D"
        >
        <span class="ais-NumericMenu-labelText">
          10$ - 100$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:100,%22end%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          100$ - 500$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &gt;= 500$
        </span>
      </label>
    </li>
  </ul>
</div>

`;

exports[`default render renders correctly with a selected value 1`] = `

<div class="ais-NumericMenu">
  <ul class="ais-NumericMenu-list">
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value
        >
        <span class="ais-NumericMenu-labelText">
          All
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22end%22:10%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &lt;= 10$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item ais-NumericMenu-item--selected">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:10,%22end%22:100%7D"
        >
        <span class="ais-NumericMenu-labelText">
          10$ - 100$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:100,%22end%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          100$ - 500$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &gt;= 500$
        </span>
      </label>
    </li>
  </ul>
</div>

`;

exports[`default render renders correctly without refinement 1`] = `

<div class="ais-NumericMenu ais-NumericMenu--noRefinement">
  <ul class="ais-NumericMenu-list">
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value
        >
        <span class="ais-NumericMenu-labelText">
          All
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22end%22:10%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &lt;= 10$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:10,%22end%22:100%7D"
        >
        <span class="ais-NumericMenu-labelText">
          10$ - 100$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:100,%22end%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          100$ - 500$
        </span>
      </label>
    </li>
    <li class="ais-NumericMenu-item">
      <label class="ais-NumericMenu-label">
        <input type="radio"
               name="brand"
               class="ais-NumericMenu-radio"
               value="%7B%22start%22:500%7D"
        >
        <span class="ais-NumericMenu-labelText">
          &gt;= 500$
        </span>
      </label>
    </li>
  </ul>
</div>

`;
